--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,5 +1,5 @@
 nav {
-    position: fixed;
+    position: sticky;
     top: 0;
     height: 10vh;
     width: 100%;
@@ -20,7 +20,7 @@ nav {
     min-width: 25%;
     height: 100%;
     list-style-type: none;
-    margin: 0;
+    margin-right: 20px;
     padding: 0;
 }
 .link-item {
